--- a/package.json
+++ b/package.json
@@ -8,17 +8,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.4",
-    "pinia": "^2.1.6",
-    "axios": "^1.5.0",
-    "element-plus": "^2.3.8",
     "@element-plus/icons-vue": "^2.1.0",
-    "dayjs": "^1.11.9"
+    "axios": "^1.5.0",
+    "crypto-js": "^4.2.0",
+    "dayjs": "^1.11.9",
+    "echarts": "^5.6.0",
+    "element-plus": "^2.3.8",
+    "pinia": "^2.1.6",
+    "vue": "^3.3.4",
+    "vue-echarts": "^7.0.3",
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
+    "@types/node": "^20.5.0",
     "@vitejs/plugin-vue": "^4.3.4",
-    "vite": "^4.4.9",
-    "@types/node": "^20.5.0"
+    "vite": "^4.4.9"
   }
 }
